--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Newborn Nap Tracker</string>
     <string name="action_settings">Settings</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Nap Schedule</string>
     <string name="second_fragment_label">Add Nap</string>
@@ -17,4 +18,15 @@
         7pm\n\n
         Bedtime @9pm
     </string>
+
+    <string-array name="sound_list">
+        <item>Lullaby</item>
+        <item>Rain</item>
+    </string-array>
+
+    <string name="title_activity_music_player">MusicPlayerActivity</string>
+    <string name="open_music_player">Open Music Player</string>
+    <string name="stop">Stop</string>
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
 </resources>
