--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
     <string name="play">Play</string>
+    <string name="exit">Exit</string>
 </resources>
