Cleaned up code: Removed unnecessary dependencies/imports/files.,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="pause">Pause</string>
     <string name="play">Play</string>
     <string name="exit">Exit</string>
+    <string name="next_recommended_sleep_time">Next recommended sleep time: %1$s</string>
 </resources>
