--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,36 +5,42 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Nap Schedule</string>
     <string name="second_fragment_label">Add Nap</string>
+    <string name="music_player_fragment_label" />
+
+    <!-- Buttons -->
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="add">Add</string>
     <string name="show_image">Show</string>
     <string name="hide_image">Hide</string>
+    <string name="stop">Stop</string>
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
+    <string name="exit">Exit</string>
+    <string name="open_music_player">Open Music Player</string>
+    <string name="sleep_cycle">Sleep Cycle</string>
+    <string name="track_sleep">Calculate</string>
 
     <string name="no_naps_scheduled">No naps scheduled yet. Use the Sleep Cycle button to plan naps.</string>
 
+    <!-- Songs -->
     <string-array name="sound_list">
         <item>Lullaby</item>
         <item>Rain</item>
     </string-array>
 
+    <!-- Text -->
     <string name="title_activity_music_player">MusicPlayerActivity</string>
-    <string name="open_music_player">Open Music Player</string>
-    <string name="stop">Stop</string>
-    <string name="pause">Pause</string>
-    <string name="play">Play</string>
-    <string name="exit">Exit</string>
-    <string name="next_recommended_sleep_time">Start looking for sleepy cues at %1$s</string>
-    <string name="title_activity_google_calendar">GoogleCalendarActivity</string>
-    <string name="open_google_calendar">Open Google Calendar</string>
-    <string name="music_player">Music Player</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="view_calendar">View Calendar</string>
-    <string name="sleep_cycle">Sleep Cycle</string>
-    <string name="track_sleep">Calculate</string>
-    <string name="enter_last_sleep_time_e_g_3_30pm">Enter time baby woke up (e.g., 3:30pm)</string>
     <string name="invalid_time_format">Invalid time format</string>
     <string name="next_predicted_sleep_time">The next sleep time after that will likely be: %1$s</string>
     <string name="and_then_sleep_time">And then after that around: %1$s</string>
     <string name="sleep_cycle_question">What time did your baby fall asleep?</string>
+    <string name="next_recommended_sleep_time">Start looking for sleepy cues at %1$s</string>
+
+    <!--  -->
+    <string name="title_activity_google_calendar">GoogleCalendarActivity</string>
+    <string name="music_player">Music Player</string>
+    <string name="view_calendar">View Calendar</string>
+    <string name="secondfragment">SecondFragment</string>
+
 </resources>
