--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="action_settings">Settings</string>
 
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">Nap Schedule</string>
-    <string name="second_fragment_label">Add Nap</string>
-    <string name="music_player_fragment_label" />
+    <string name="first_fragment_label">Newborn Nap Tracker</string>
+    <string name="add_nap_fragment_label">Add Nap</string>
+    <string name="music_player_fragment_label" >Music Player</string>
 
     <!-- Buttons -->
     <string name="next">Next</string>
@@ -41,6 +41,6 @@
     <string name="title_activity_google_calendar">GoogleCalendarActivity</string>
     <string name="music_player">Music Player</string>
     <string name="view_calendar">View Calendar</string>
-    <string name="secondfragment">SecondFragment</string>
+    <string name="secondfragment">AddNapFragment</string>
 
 </resources>
