--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">Newborn Nap Tracker</string>
+    <string name="home_fragment_label">Newborn Nap Tracker</string>
     <string name="add_nap_fragment_label">Add Nap</string>
     <string name="music_player_fragment_label" >Music Player</string>
 
@@ -36,11 +36,13 @@
     <string name="and_then_sleep_time">And then after that around: %1$s</string>
     <string name="sleep_cycle_question">What time did your baby fall asleep?</string>
     <string name="next_recommended_sleep_time">Start looking for sleepy cues at %1$s</string>
+    <string name="add_nap_description">Tap a date to add a nap to your calendar. This helps you track your baby\'s sleep schedule alongside your daily plans.</string>
 
     <!--  -->
     <string name="title_activity_google_calendar">GoogleCalendarActivity</string>
     <string name="music_player">Music Player</string>
     <string name="view_calendar">View Calendar</string>
     <string name="secondfragment">AddNapFragment</string>
+    <string name="home">Home</string>
 
 </resources>
