--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Newborn Nap Tracker</string>
     <string name="add_nap_fragment_label">Add Nap</string>
-    <string name="music_player_fragment_label" >Music Player</string>
+    <string name="music_player_fragment_label">Music Player</string>
 
     <!-- Buttons -->
     <string name="next">Next</string>
@@ -42,7 +42,14 @@
     <string name="title_activity_google_calendar">GoogleCalendarActivity</string>
     <string name="music_player">Music Player</string>
     <string name="view_calendar">View Calendar</string>
-    <string name="secondfragment">AddNapFragment</string>
     <string name="home">Home</string>
+    <string name="album_art">Album Art</string>
+    <string name="song_name">Song Name</string>
+    <string name="artist_name">Artist Name</string>
+    <string name="_0_00">0:00</string>
+    <string name="album">ALBUM</string>
+    <string name="album_title">Album Title</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="song_list_fragment_label">Songs</string>
 
 </resources>
